--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -16,14 +16,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Courselib path already in sys.path.\n"
+     ]
+    },
+    {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'courselib'",
+     "evalue": "No module named 'models'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcourselib path not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcourselib_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcourselib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlib\u001b[39;00m  \u001b[38;5;66;03m# to integrate our code with the courselib\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'courselib'"
+      "Cell \u001b[1;32mIn[9], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCourselib path already in sys.path.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Import the courselib files\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmodels\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'models'"
      ]
     }
    ],
@@ -34,26 +43,67 @@
     "\n",
     "import sys\n",
     "import os\n",
-    "\n",
-    "# Add the repo root (two levels up from this notebook) to sys.path\n",
-    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"..\"))\n",
-    "if repo_root not in sys.path:\n",
-    "    sys.path.insert(0, repo_root)\n",
-    "    print(f\"{repo_root} added to sys.path.\")\n",
-    "else:\n",
-    "    print(\"Repo root already in sys.path.\")\n",
-    "\n",
-    "# Import courselib and other libraries\n",
-    "import courselib as lib\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "# Add the repo root (one level up from this notebook) to sys.path\n",
+    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "courselib_path = os.path.join(repo_root, \"AppliedML\", \"courselib\")\n",
+    "if courselib_path not in sys.path:\n",
+    "    sys.path.insert(0, courselib_path)\n",
+    "    print(f\"{courselib_path} added to sys.path.\")\n",
+    "else:\n",
+    "    print(\"Courselib path already in sys.path.\")\n",
+    "\n",
+    "# Import the courselib files\n",
+    "import optimizers\n",
+    "import models\n",
+    "import utils"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e5be2c27",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "05c9a498",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repo_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad719e4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Import from optimizers.py ---\n",
+    "import optimizers\n",
+    "\n",
+    "# --- Import specific models from the models package ---\n",
+    "from models.linear_models import LinearRegression\n",
+    "from models.tree import DecisionTreeClassifier\n",
+    "from models.svm import SVM\n",
+    "\n",
+    "# --- Import specific utilities from the utils package ---\n",
+    "from utils.preprocessing import StandardScaler\n",
+    "from utils.splits import train_test_split\n",
+    "from utils.metrics import accuracy_score\n",
+    "\n",
+    "# Now you can use the imported functions and classes directly\n",
+    "# Example:\n",
+    "# model = LinearRegression()\n",
+    "# accuracy = accuracy_score(y_true, y_pred)"
+   ]
   }
  ],
  "metadata": {
