--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "48cab40f",
    "metadata": {},
    "outputs": [
@@ -19,20 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "Courselib path already in sys.path.\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'models'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCourselib path already in sys.path.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Import the courselib files\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmodels\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'models'"
+      "c:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib added to sys.path.\n"
      ]
     }
    ],
@@ -45,72 +32,331 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Add the repo root (one level up from this notebook) to sys.path\n",
+    "# Add the repo root to access the courselib\n",
     "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "courselib_path = os.path.join(repo_root, \"AppliedML\", \"courselib\")\n",
     "if courselib_path not in sys.path:\n",
     "    sys.path.insert(0, courselib_path)\n",
     "    print(f\"{courselib_path} added to sys.path.\")\n",
     "else:\n",
-    "    print(\"Courselib path already in sys.path.\")\n",
-    "\n",
-    "# Import the courselib files\n",
-    "import optimizers\n",
-    "import models\n",
-    "import utils"
+    "    print(\"Courselib path already in sys.path.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66d08ae2",
+   "metadata": {},
+   "source": [
+    "As this project is supposed to integrate well with the courselib, we have downloaded the current GitHub Repo up to week 11 and our code will be integrated within courselib libraries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "05c9a498",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'load_uciadult' from 'utils.loaders' (c:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib\\utils\\loaders.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mloaders\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_uciadult\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# ensure the data directory exists / else create it\u001b[39;00m\n\u001b[0;32m      4\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'load_uciadult' from 'utils.loaders' (c:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib\\utils\\loaders.py)"
      ]
     }
    ],
    "source": [
-    "print(repo_root)"
+    "from utils.loaders import load_uciadult\n",
+    "\n",
+    "# ensure the data directory exists / else create it\n",
+    "os.makedirs('data', exist_ok=True)\n",
+    "\n",
+    "# get the data\n",
+    "df = load_uciadult()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad719e4e",
+   "id": "477c3dba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "9b25dbda-bba8-49bc-a7b0-6624219c5361",
+       "rows": [
+        [
+         "age",
+         "0"
+        ],
+        [
+         "workclass",
+         "0"
+        ],
+        [
+         "fnlwgt",
+         "0"
+        ],
+        [
+         "education",
+         "0"
+        ],
+        [
+         "education-num",
+         "0"
+        ],
+        [
+         "marital-status",
+         "0"
+        ],
+        [
+         "occupation",
+         "0"
+        ],
+        [
+         "relationship",
+         "0"
+        ],
+        [
+         "race",
+         "0"
+        ],
+        [
+         "sex",
+         "0"
+        ],
+        [
+         "capital-gain",
+         "0"
+        ],
+        [
+         "capital-loss",
+         "0"
+        ],
+        [
+         "hours-per-week",
+         "0"
+        ],
+        [
+         "native-country",
+         "0"
+        ],
+        [
+         "income",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 15
+       }
+      },
+      "text/plain": [
+       "age               0\n",
+       "workclass         0\n",
+       "fnlwgt            0\n",
+       "education         0\n",
+       "education-num     0\n",
+       "marital-status    0\n",
+       "occupation        0\n",
+       "relationship      0\n",
+       "race              0\n",
+       "sex               0\n",
+       "capital-gain      0\n",
+       "capital-loss      0\n",
+       "hours-per-week    0\n",
+       "native-country    0\n",
+       "income            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for missing values\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d11a078",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'handle_duplicates' from 'utils.preprocessing' (c:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m handle_duplicates\n\u001b[0;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m handle_duplicates(df)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'handle_duplicates' from 'utils.preprocessing' (c:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.preprocessing import handle_duplicates\n",
+    "\n",
+    "df = handle_duplicates(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92e7d854",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dc0c67be",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# basic info about the data set \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# basic info about the data set \n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "09b7ae08",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# summary stats about the variables\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mdescribe()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# summary stats about the variables\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "666d1275",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Plot the balance of the target variable 'income'\u001b[39;00m\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m4\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mincome\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\u001b[38;5;241m.\u001b[39mplot(kind\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbar\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mClass Balance of Income\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIncome (0 = <=50K, 1 = >50K)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 600x400 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Plot the balance of the target variable 'income'\n",
+    "plt.figure(figsize=(6,4))\n",
+    "df['income'].value_counts().plot(kind='bar')\n",
+    "plt.title('Class Balance of Income')\n",
+    "plt.xlabel('Income (0 = <=50K, 1 = >50K)')\n",
+    "plt.ylabel('Count')\n",
+    "plt.xticks(rotation=0)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cbdd21ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Drop all rows with any missing values\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mdropna(inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Convert target variable \"income\" to binary: 1 if >50K, 0 otherwise\u001b[39;00m\n\u001b[0;32m      5\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincome\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincome\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>50K\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop all rows with any missing values\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "# Convert target variable \"income\" to binary: 1 if >50K, 0 otherwise\n",
+    "df[\"income\"] = df[\"income\"].apply(lambda x: 1 if x.strip() == \">50K\" else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deab9232",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Import from optimizers.py ---\n",
-    "import optimizers\n",
-    "\n",
-    "# --- Import specific models from the models package ---\n",
-    "from models.linear_models import LinearRegression\n",
-    "from models.tree import DecisionTreeClassifier\n",
-    "from models.svm import SVM\n",
-    "\n",
-    "# --- Import specific utilities from the utils package ---\n",
-    "from utils.preprocessing import StandardScaler\n",
-    "from utils.splits import train_test_split\n",
-    "from utils.metrics import accuracy_score\n",
-    "\n",
-    "# Now you can use the imported functions and classes directly\n",
-    "# Example:\n",
-    "# model = LinearRegression()\n",
-    "# accuracy = accuracy_score(y_true, y_pred)"
+    "# first glimpse into the data set\n",
+    "df.head()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "applied_ml",
+   "display_name": "Python (applied_ml)",
    "language": "python",
-   "name": "python3"
+   "name": "applied_ml"
   },
   "language_info": {
    "codemirror_mode": {
