first version of Adam and SGD, as well as cleaned up encoding + scaling

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "48cab40f",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "17922581",
    "metadata": {},
    "outputs": [
@@ -1517,17 +1517,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f450a5a",
+   "id": "85245d97",
    "metadata": {},
    "source": [
-    "# Model Training and Comparison\n",
     "\n",
-    "Now that our data is preprocessed and split, we can train and compare different classification models. We will create a pipeline to automate this process for the following models:\n",
+    "# Feature Scaling\n",
     "\n",
-    "1.  **Logistic Regression**: A solid baseline model for binary classification.\n",
-    "2.  **Random Forest Classifier**: An ensemble model that often provides high accuracy.\n",
+    "Before training our models, it's important to scale our numerical features. Of course, it makes no sense to also scale the freshly encoded categorical data, such as the ordinally encoded `education` variable as we would destroy its ordinal structure immediately again.  Models like Logistic Regression are sensitive to the scale of the input data, and scaling can lead to faster convergence and better performance. We will use standardization, where each feature is scaled to have a mean of 0 and a standard deviation of 1.\n",
     "\n",
-    "We will evaluate each model based on its accuracy, precision, recall, F1-score, and training time."
+    "We will fit the scaler on the training data and use the same scaler to transform the test data. This prevents any information from the test set from leaking into our training process.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27b245df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature scaling complete for numerical columns.\n",
+      "X_train_scaled shape: (26030, 33)\n",
+      "X_test_scaled shape: (6507, 33)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.normalization import StandardScaler\n",
+    "\n",
+    "# Identify numerical columns for scaling\n",
+    "numerical_cols = ['age', 'fnlwgt', 'capital-gain', 'capital-loss', 'hours-per-week']\n",
+    "X_columns = df_encoded.drop('income', axis=1).columns\n",
+    "numerical_indices = [X_columns.get_loc(col) for col in numerical_cols]\n",
+    "\n",
+    "# Initialize the scaler with the indices of numerical columns\n",
+    "scaler = StandardScaler(numerical_indices=numerical_indices)\n",
+    "\n",
+    "# Fit on training data and transform both training and test data\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "print(\"Feature scaling complete for numerical columns.\")\n",
+    "print(\"X_train_scaled shape:\", X_train_scaled.shape)\n",
+    "print(\"X_test_scaled shape:\", X_test_scaled.shape)\n"
    ]
   },
   {
@@ -1538,14 +1572,17 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from models.linear_models import LinearBinaryClassification\n",
+    "from models.tree import DecisionTreeClassifier\n",
+    "from utils.metrics import accuracy, precision, recall, f1_score, confusion_matrix\n",
     "\n",
     "# Define the models to compare\n",
     "models = {\n",
-    "    'Logistic Regression': LogisticRegression(max_iter=1000),\n",
-    "    'Random Forest': RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "    'Logistic Regression': LinearBinaryClassification(learning_rate=0.1, n_iterations=1000),\n",
+    "    'Decision Tree': DecisionTreeClassifier(max_depth=10, min_samples_split=2)\n",
     "}\n",
     "\n",
     "results = []\n",
@@ -1556,35 +1593,46 @@
     "    \n",
     "    # Train the model and measure time\n",
     "    start_time = time.time()\n",
-    "    model.fit(X_train, y_train)\n",
+    "    model.fit(X_train_scaled, y_train)\n",
     "    end_time = time.time()\n",
     "    training_time = end_time - start_time\n",
     "    \n",
     "    # Make predictions\n",
-    "    y_pred = model.predict(X_test)\n",
+    "    y_pred = model.predict(X_test_scaled)\n",
     "    \n",
     "    # Get performance metrics\n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    report = classification_report(y_test, y_pred, output_dict=True)\n",
+    "    acc = accuracy(y_test, y_pred)\n",
+    "    prec = precision(y_test, y_pred)\n",
+    "    rec = recall(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
     "    \n",
     "    # Store results\n",
     "    results.append({\n",
     "        'Model': model_name,\n",
-    "        'Accuracy': accuracy,\n",
-    "        'Precision (1)': report['1']['precision'],\n",
-    "        'Recall (1)': report['1']['recall'],\n",
-    "        'F1-Score (1)': report['1']['f1-score'],\n",
+    "        'Accuracy': acc,\n",
+    "        'Precision': prec,\n",
+    "        'Recall': rec,\n",
+    "        'F1-Score': f1,\n",
     "        'Training Time (s)': training_time\n",
     "    })\n",
     "    \n",
     "    # Print classification report\n",
-    "    print(classification_report(y_test, y_pred))\n",
-    "    \n",
+    "    print(f\"Accuracy: {acc:.4f}\")\n",
+    "    print(f\"Precision: {prec:.4f}\")\n",
+    "    print(f\"Recall: {rec:.4f}\")\n",
+    "    print(f\"F1 Score: {f1:.4f}\")\n",
+    "\n",
     "    # Plot confusion matrix\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
-    "    disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=model.classes_)\n",
-    "    disp.plot()\n",
-    "    plt.title(f'Confusion Matrix for {model_name}')\n",
+    "    fig, ax = plt.subplots()\n",
+    "    cax = ax.matshow(cm, cmap=plt.cm.Blues)\n",
+    "    fig.colorbar(cax)\n",
+    "    ax.set_xlabel('Predicted')\n",
+    "    ax.set_ylabel('Actual')\n",
+    "    ax.set_title(f'Confusion Matrix for {model_name}')\n",
+    "    # Add text annotations.\n",
+    "    for (i, j), val in np.ndenumerate(cm):\n",
+    "        ax.text(j, i, f'{val}', ha='center', va='center', color='red')\n",
     "    plt.show()\n",
     "    print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
     "\n",
