first version running version of log reg, although something is off, results are too good. later

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "27b245df",
    "metadata": {},
    "outputs": [
@@ -1569,19 +1569,52 @@
    "execution_count": null,
    "id": "9b299dca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Training Logistic Regression ---\n"
+     ]
+    },
+    {
+     "ename": "AxisError",
+     "evalue": "axis 0 is out of bounds for array of dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[88], line 44\u001b[0m\n\u001b[0;32m     38\u001b[0m training_time \u001b[38;5;241m=\u001b[39m end_time \u001b[38;5;241m-\u001b[39m start_time\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Make predictions\u001b[39;00m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# y_pred = model(X_test_scaled)\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Get performance metrics\u001b[39;00m\n\u001b[1;32m---> 44\u001b[0m acc \u001b[38;5;241m=\u001b[39m \u001b[43maccuracy\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     47\u001b[0m \u001b[38;5;66;03m# Store results\u001b[39;00m\n\u001b[0;32m     48\u001b[0m results\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     49\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModel\u001b[39m\u001b[38;5;124m'\u001b[39m: model_name,\n\u001b[0;32m     50\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m: acc,\n\u001b[0;32m     51\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining Time (s)\u001b[39m\u001b[38;5;124m'\u001b[39m: training_time\n\u001b[0;32m     52\u001b[0m })\n",
+      "File \u001b[1;32mc:\\Users\\janne\\Google Drive\\Master 2\\AML\\github_code\\final_project\\AML---final-project\\AppliedML\\courselib\\utils\\metrics.py:14\u001b[0m, in \u001b[0;36maccuracy\u001b[1;34m(y_pred, y_true, one_hot_encoded_labels)\u001b[0m\n\u001b[0;32m     12\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(y_pred,axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     13\u001b[0m     y_true \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(y_true,axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\janne\\anaconda3_new\\envs\\applied_ml\\lib\\site-packages\\numpy\\_core\\fromnumeric.py:3858\u001b[0m, in \u001b[0;36mmean\u001b[1;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[0;32m   3856\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m   3857\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 3858\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m mean(axis\u001b[38;5;241m=\u001b[39maxis, dtype\u001b[38;5;241m=\u001b[39mdtype, out\u001b[38;5;241m=\u001b[39mout, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   3860\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _methods\u001b[38;5;241m.\u001b[39m_mean(a, axis\u001b[38;5;241m=\u001b[39maxis, dtype\u001b[38;5;241m=\u001b[39mdtype,\n\u001b[0;32m   3861\u001b[0m                       out\u001b[38;5;241m=\u001b[39mout, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\janne\\anaconda3_new\\envs\\applied_ml\\lib\\site-packages\\numpy\\_core\\_methods.py:123\u001b[0m, in \u001b[0;36m_mean\u001b[1;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[0;32m    119\u001b[0m arr \u001b[38;5;241m=\u001b[39m asanyarray(a)\n\u001b[0;32m    121\u001b[0m is_float16_result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m--> 123\u001b[0m rcount \u001b[38;5;241m=\u001b[39m \u001b[43m_count_reduce_items\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    124\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m rcount \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m where \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m umr_any(rcount \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m    125\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean of empty slice.\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;167;01mRuntimeWarning\u001b[39;00m, stacklevel\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\janne\\anaconda3_new\\envs\\applied_ml\\lib\\site-packages\\numpy\\_core\\_methods.py:86\u001b[0m, in \u001b[0;36m_count_reduce_items\u001b[1;34m(arr, axis, keepdims, where)\u001b[0m\n\u001b[0;32m     84\u001b[0m     items \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     85\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m ax \u001b[38;5;129;01min\u001b[39;00m axis:\n\u001b[1;32m---> 86\u001b[0m         items \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mshape[\u001b[43mmu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnormalize_axis_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mndim\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[0;32m     87\u001b[0m     items \u001b[38;5;241m=\u001b[39m nt\u001b[38;5;241m.\u001b[39mintp(items)\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;66;03m# TODO: Optimize case when `where` is broadcast along a non-reduction\u001b[39;00m\n\u001b[0;32m     90\u001b[0m     \u001b[38;5;66;03m# axis and full sum is more excessive than needed.\u001b[39;00m\n\u001b[0;32m     91\u001b[0m \n\u001b[0;32m     92\u001b[0m     \u001b[38;5;66;03m# guarded to protect circular imports\u001b[39;00m\n",
+      "\u001b[1;31mAxisError\u001b[0m: axis 0 is out of bounds for array of dimension 0"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "from models.linear_models import LinearBinaryClassification\n",
     "from models.tree import DecisionTreeClassifier\n",
-    "from utils.metrics import accuracy, precision, recall, f1_score, confusion_matrix\n",
+    "from utils.metrics import accuracy, confusion_matrix\n",
+    "from optimizers import GDOptimizer\n",
+    "\n",
+    "# model params for logistic regression\n",
+    "n_features = X_train_scaled.shape[1]\n",
+    "w_logreg = np.zeros(n_features)\n",
+    "b_logreg = 0\n",
+    "optimizer_logreg = GDOptimizer(learning_rate=0.01)\n",
+    "class_labels_logreg = [0, 1] \n",
     "\n",
     "# Define the models to compare\n",
     "models = {\n",
-    "    'Logistic Regression': LinearBinaryClassification(learning_rate=0.1, n_iterations=1000),\n",
+    "    'Logistic Regression': LinearBinaryClassification(\n",
+    "        w=w_logreg,\n",
+    "        b=b_logreg,\n",
+    "        optimizer=optimizer_logreg,\n",
+    "        class_labels=class_labels_logreg\n",
+    "    ),\n",
     "    'Decision Tree': DecisionTreeClassifier(max_depth=10, min_samples_split=2)\n",
     "}\n",
     "\n",
@@ -1593,34 +1626,29 @@
     "    \n",
     "    # Train the model and measure time\n",
     "    start_time = time.time()\n",
-    "    model.fit(X_train_scaled, y_train)\n",
+    "    if model_name == 'Logistic Regression':\n",
+    "        model.fit(X_train_scaled, y_train, num_epochs=100, batch_size=32)\n",
+    "    else:\n",
+    "        model.fit(X_train_scaled, y_train)\n",
     "    end_time = time.time()\n",
     "    training_time = end_time - start_time\n",
     "    \n",
     "    # Make predictions\n",
-    "    y_pred = model.predict(X_test_scaled)\n",
+    "    y_pred = model(X_test_scaled)\n",
     "    \n",
     "    # Get performance metrics\n",
     "    acc = accuracy(y_test, y_pred)\n",
-    "    prec = precision(y_test, y_pred)\n",
-    "    rec = recall(y_test, y_pred)\n",
-    "    f1 = f1_score(y_test, y_pred)\n",
+    "\n",
     "    \n",
     "    # Store results\n",
     "    results.append({\n",
     "        'Model': model_name,\n",
     "        'Accuracy': acc,\n",
-    "        'Precision': prec,\n",
-    "        'Recall': rec,\n",
-    "        'F1-Score': f1,\n",
     "        'Training Time (s)': training_time\n",
     "    })\n",
     "    \n",
     "    # Print classification report\n",
     "    print(f\"Accuracy: {acc:.4f}\")\n",
-    "    print(f\"Precision: {prec:.4f}\")\n",
-    "    print(f\"Recall: {rec:.4f}\")\n",
-    "    print(f\"F1 Score: {f1:.4f}\")\n",
     "\n",
     "    # Plot confusion matrix\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
