deal with skewed features

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "48cab40f",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib added to sys.path.\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Courselib path already in sys.path.\n"
      ]
     }
    ],
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "05c9a498",
    "metadata": {},
    "outputs": [
@@ -120,12 +122,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "477c3dba",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "6d532491-afaa-4171-b716-32b1ab3e00da",
+       "rows": [
+        [
+         "age",
+         "0"
+        ],
+        [
+         "workclass",
+         "1836"
+        ],
+        [
+         "fnlwgt",
+         "0"
+        ],
+        [
+         "education",
+         "0"
+        ],
+        [
+         "education-num",
+         "0"
+        ],
+        [
+         "marital-status",
+         "0"
+        ],
+        [
+         "occupation",
+         "1843"
+        ],
+        [
+         "relationship",
+         "0"
+        ],
+        [
+         "race",
+         "0"
+        ],
+        [
+         "sex",
+         "0"
+        ],
+        [
+         "capital-gain",
+         "0"
+        ],
+        [
+         "capital-loss",
+         "0"
+        ],
+        [
+         "hours-per-week",
+         "0"
+        ],
+        [
+         "native-country",
+         "583"
+        ],
+        [
+         "income",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 15
+       }
+      },
       "text/plain": [
        "age                  0\n",
        "workclass         1836\n",
@@ -145,7 +228,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7d11a078",
    "metadata": {},
    "outputs": [
@@ -176,73 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24 duplicate observations in the dataset were removed.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:74: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].fillna('Missing')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:80: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].str.strip()\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n",
-      "f:\\临时存放\\AML---final-project\\AppliedML\\courselib\\utils\\preprocessing.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[col] = df[col].astype('category')\n"
+      "no duplicated observations in the dataset.\n"
      ]
     }
    ],
@@ -255,12 +272,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1208affe",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "age",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "workclass",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "fnlwgt",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "education",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "education-num",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "marital-status",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "occupation",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "relationship",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "race",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "sex",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "capital-gain",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "capital-loss",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "hours-per-week",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "native-country",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "income",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "d65607f6-2dbe-42aa-9ddc-6c73b7229191",
+       "rows": [
+        [
+         "0",
+         "39",
+         "State-gov",
+         "77516",
+         "Bachelors",
+         "13",
+         "Never-married",
+         "Adm-clerical",
+         "Not-in-family",
+         "White",
+         "Male",
+         "2174",
+         "0",
+         "40",
+         "United-States",
+         "0"
+        ],
+        [
+         "1",
+         "50",
+         "Self-emp-not-inc",
+         "83311",
+         "Bachelors",
+         "13",
+         "Married-civ-spouse",
+         "Exec-managerial",
+         "Husband",
+         "White",
+         "Male",
+         "0",
+         "0",
+         "13",
+         "United-States",
+         "0"
+        ],
+        [
+         "2",
+         "38",
+         "Private",
+         "215646",
+         "HS-grad",
+         "9",
+         "Divorced",
+         "Handlers-cleaners",
+         "Not-in-family",
+         "White",
+         "Male",
+         "0",
+         "0",
+         "40",
+         "United-States",
+         "0"
+        ],
+        [
+         "3",
+         "53",
+         "Private",
+         "234721",
+         "11th",
+         "7",
+         "Married-civ-spouse",
+         "Handlers-cleaners",
+         "Husband",
+         "Black",
+         "Male",
+         "0",
+         "0",
+         "40",
+         "United-States",
+         "0"
+        ],
+        [
+         "4",
+         "28",
+         "Private",
+         "338409",
+         "Bachelors",
+         "13",
+         "Married-civ-spouse",
+         "Prof-specialty",
+         "Wife",
+         "Black",
+         "Female",
+         "0",
+         "0",
+         "40",
+         "Cuba",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 15,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -415,7 +613,7 @@
        "4             0             0              40           Cuba       0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "dc0c67be",
    "metadata": {},
    "outputs": [
@@ -475,12 +673,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "09b7ae08",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "fnlwgt",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "education-num",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "capital-gain",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "capital-loss",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "hours-per-week",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "income",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "e0c3322f-4752-427f-aae3-3646913e832b",
+       "rows": [
+        [
+         "count",
+         "32537.0",
+         "32537.0",
+         "32537.0",
+         "32537.0",
+         "32537.0",
+         "32537.0",
+         "32537.0"
+        ],
+        [
+         "mean",
+         "38.585548759873376",
+         "189780.84851092604",
+         "10.081814549589698",
+         "1078.4437409718166",
+         "87.36822694163568",
+         "40.44032947106371",
+         "0.2409257153394597"
+        ],
+        [
+         "std",
+         "13.637983518469866",
+         "105556.47100949337",
+         "2.5716330100707423",
+         "7387.957424191213",
+         "403.10183306309347",
+         "12.346889182125157",
+         "0.42765188634461754"
+        ],
+        [
+         "min",
+         "17.0",
+         "12285.0",
+         "1.0",
+         "0.0",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "25%",
+         "28.0",
+         "117827.0",
+         "9.0",
+         "0.0",
+         "0.0",
+         "40.0",
+         "0.0"
+        ],
+        [
+         "50%",
+         "37.0",
+         "178356.0",
+         "10.0",
+         "0.0",
+         "0.0",
+         "40.0",
+         "0.0"
+        ],
+        [
+         "75%",
+         "48.0",
+         "236993.0",
+         "12.0",
+         "0.0",
+         "0.0",
+         "45.0",
+         "0.0"
+        ],
+        [
+         "max",
+         "90.0",
+         "1484705.0",
+         "16.0",
+         "99999.0",
+         "4356.0",
+         "99.0",
+         "1.0"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 8
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -616,7 +945,7 @@
        "max         99.000000      1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "2aa1c067",
    "metadata": {},
    "outputs": [
@@ -666,10 +995,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11cb0e05",
+   "id": "3973d568",
    "metadata": {},
    "source": [
-    " next: deal with outliers "
+    "- High Skewness: `fnlwgt`, `capital-gain`, and `capital-loss` are heavily right-skewed. For `capital-gain`, and `capital-loss`, the majority of values are zero, with a few very large outliers. This indicates that these events are rare but have a high magnitude when they occur. `fnlwgt`is dropped as that variable is difficult to interpret.\n",
+    "- Moderate Outliers: age and hours-per-week also show outliers but have more symmetric distributions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bd7a6fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log1p transformation and binary indicators for: ['capital-gain', 'capital-loss']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.preprocessing import transform_skewed_features\n",
+    "\n",
+    "# skewed columns and apply transformation\n",
+    "skewed_cols = ['capital-gain', 'capital-loss']\n",
+    "df = transform_skewed_features(df, skewed_cols)"
    ]
   },
   {
@@ -1588,7 +1940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
