some more feature engineering

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "60c5aaf7",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1555,7 @@
     }
    ],
    "source": [
-    "# Distribution and mean income by marital status\n",
+    "# mean income by marital status\n",
     "\n",
     "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
     "\n",
@@ -1619,30 +1619,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d89113e",
+   "execution_count": 52,
+   "id": "146804ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sex\n",
-      "1    21775\n",
-      "0    10762\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# make the sex variable numerical (it is already binary, but categorical)\n",
-    "df['sex'] = (df['sex'] == 'Male').astype(int)\n",
-    "print(df['sex'].value_counts())"
+    "# merge husband and wife into spouse in relationship variable to further reduce cardinality for onehot encoding\n",
+    "df['relationship'] = df['relationship'].replace({'Husband': 'Spouse', 'Wife': 'Spouse'})\n",
+    "df['relationship'] = df['relationship'].cat.remove_unused_categories()\n",
+    "\n",
+    "# merge without-pay, never-worked categories into other to further reduce cardinality for onehot encoding\n",
+    "df['workclass'] = df['workclass'].replace(['Without-pay', 'Never-worked'], 'Other')\n",
+    "df['workclass'] = df['workclass'].cat.remove_unused_categories()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "id": "2a3bb598",
    "metadata": {},
    "outputs": [
@@ -1681,6 +1674,26 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9696c99f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge Amer-Indian-Eskimo and Other categories into other to further reduce cardinality for onehot encoding\n",
+    "df['race'] = df['race'].replace({'Amer-Indian-Eskimo': 'Other'})\n",
+    "df['race'] = df['race'].cat.remove_unused_categories()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a2d8fd",
+   "metadata": {},
+   "source": [
+    "The merging of categories in features like race, relationship, and workclass leads to only a small reduction in dimensionality, but is justified because the combined groups are both small and statistically similar in terms of income distribution. This reduces noise and the risk of overfitting, while preserving the main socioeconomic patterns in the data. By merging only where appropriate, we maintain interpretability and model performance without unnecessary simplification."
    ]
   },
   {
